Fix nav items spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,7 @@
 .navbar {
   background: linear-gradient(90deg, rgb(216, 236, 203) 0%, rgb(247, 241, 204) 100%);
   height: 80px;
-  /* display: flex; */
   justify-content: center;
-  /* align-items: center; */
   font-size: 1.4rem;
   position: sticky;
   top: 0;
@@ -12,7 +10,6 @@
 
 .navbar-container {
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   height: 80px;
   max-width: 1500px;
@@ -22,8 +19,6 @@
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 20px;
-  list-style: none;
-  /* text-align: center; */
   width: 60vw;
   justify-content: end;
 }
